#223 Fix latest overflow

--- a/web-app/src/app/components/latest/latest.component.scss
+++ b/web-app/src/app/components/latest/latest.component.scss
@@ -5,6 +5,9 @@
 
 .LatestContainerInner {
     overflow: hidden;
+}
+
+.LatestOverflow {
     display: inline-flex;
 }
 
